src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auth_Category__c</fullName>
        <label>Auth Category</label>
        <picklist>
            <picklistValues>
                <fullName>DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auth_Type__c</fullName>
        <label>Auth Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code__c</fullName>
        <label>CPT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disease__c</fullName>
        <label>Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Diabetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prone to Stress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Patient</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Span__c</fullName>
        <label>Eligibility Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <label>Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Helath_Plan_Id__c</fullName>
        <label>Health Plan ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helath_Plan__c</fullName>
        <label>Health Plan</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMedicare__c</fullName>
        <label>IsMedicare</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jawbone_Access_Token__c</fullName>
        <label>Jawbone Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jawbone_Refresh_Token__c</fullName>
        <label>Jawbone Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jawbone_XID__c</fullName>
        <externalId>true</externalId>
        <label>Jawbone XID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>There are 4 levels of stratifications of Chronic conditions based on risk scoring</description>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level I</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Level II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
        <label>ORGCUSTOM4_OLD_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <label>Physician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diag_Code__c</fullName>
        <label>Primary Diag Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_From_Date__c</fullName>
        <label>Service From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>Encrypted Social Security Number field</description>
        <inlineHelpText>Enter your Social Security number. Remember to include dashes after the third and fifth digits.</inlineHelpText>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mRNA_Analysis__c</fullName>
        <label>mRNA Analysis</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>profilePic__c</fullName>
        <label>profilePic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Level__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Members</label>
    </listViews>
    <listViews>
        <fullName>Level_I</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Level I</value>
        </filters>
        <label>Level I</label>
    </listViews>
    <listViews>
        <fullName>Level_II</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Level II</value>
        </filters>
        <label>Level II</label>
    </listViews>
    <listViews>
        <fullName>Level_III</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Level III</value>
        </filters>
        <label>Level III</label>
    </listViews>
    <listViews>
        <fullName>Level_IV</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Level IV</value>
        </filters>
        <label>Level IV</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Out_Reach_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Out Reach List</label>
    </listViews>
    <listViews>
        <fullName>Population_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>DND__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DND__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Population List</label>
    </listViews>
    <listViews>
        <fullName>Triage_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>DND__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DND__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Triage List</label>
    </listViews>
    <recordTypes>
        <fullName>New_Member</fullName>
        <active>true</active>
        <label>New Member</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Social_Security_Number_Format_Check</fullName>
        <active>false</active>
        <description>alidates that the Social Security Number is in the correct format</description>
        <errorConditionFormula>NOT(
OR(
LEN (Social_Security_Number__c) = 0,
REGEX( Social_Security_Number__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Social_Security_Number__c</errorDisplayField>
        <errorMessage>The Social Security number you entered is not in the correct format. The correct format is 999-99-9999.</errorMessage>
    </validationRules>
</CustomObject>